New readme file (#2)

--- a/ruff.toml
+++ b/ruff.toml
@@ -1,6 +1,7 @@
 # Set the maximum line length to 79.
 target-version = "py312"
 line-length = 88
+exclude = ["tests"]
 
 [lint]
 # Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
