Populate placeholder ROMs with predictable byte patterns

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,14 +26,18 @@ jobs:
           mkdir -p rom
           python - <<'PY'
           import os
+
+          def pattern(size: int) -> bytes:
+              return bytes((i % 256 for i in range(size)))
+
           os.makedirs('rom', exist_ok=True)
-          kernel = bytearray([0] * 8192)
+          kernel = bytearray(pattern(8192))
           kernel[-2] = 0x34
           kernel[-1] = 0x12
           for name, data in [
               ('kernel.bin', kernel),
-              ('basic.bin', bytes(8192)),
-              ('chargen.bin', bytes(4096)),
+              ('basic.bin', pattern(8192)),
+              ('chargen.bin', pattern(4096)),
           ]:
               with open(f'rom/{name}', 'wb') as f:
                   f.write(data)
